--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@heroicons/react": "^2.0.13",
     "formik": "^2.2.9",
+    "next": "12.3",
     "next-pwa": "^5.5.4",
+    "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.14",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "qs": "^6.11.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.7",
     "swiper": "^8.3.1",
@@ -25,10 +27,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4",
-    "cross-env": "^7.0.3"
+    "tailwindcss": "^3.2.4"
   }
 }
