--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "axios": "^1.2.2",
     "formik": "^2.2.9",
     "next": "12.3",
     "next-pwa": "^5.5.4",
